# DepartmentAssistant

./: Dockerfile  README.md  alembic.ini  app.py  demo.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  seed_db.py
src/alembic/: env.py
src/alembic/versions/: 1591d2613ee4_change_tasks_chat_id_to_bigint.py  549b4b77022b_create_tasks_table.py  6ed0b5d46358_change_embedding_dimensions_to_768.py  7d0b9f99f956_create_faq_entries_table.py
src/department_assistant/: __main__.py
src/department_assistant/bot/: keyboards.py  states.py
src/department_assistant/bot/handlers/: direct_commands.py  llm_flows.py
src/department_assistant/core/: config.py  models.py
src/department_assistant/scheduler/: scheduler.py
src/department_assistant/services/: document_parser.py  faq_service.py  llm_router.py  llm_service.py  task_service.py
src/department_assistant/storage/: database.py  s3_storage.py
src/department_assistant/storage/models/: base.py  faq.py  task.py
