[project]
name = "departmentassistant"
version = "0.1.0"
description = ""
authors = [
    {name = "liinaD3210",email = "vodenikov.daniil@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot (>=22.1,<23.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
